--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
     "morgan": "1.10.0"
   },
