--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "nanoid": "^3.1.25",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
