--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^10.0.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
+    "mongoose": "^6.0.7",
     "morgan": "1.10.0",
     "nanoid": "^3.1.25",
     "yup": "^0.32.9"
