--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
+    "http-errors": "^1.8.0",
     "mongoose": "^6.0.7",
     "morgan": "1.10.0",
     "nanoid": "^3.1.25",
