--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
+    "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
     "nanoid": "^3.1.25",
     "yup": "^0.32.9"
