--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
     "http-errors": "^1.8.0",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.25",
     "yup": "^0.32.9"
   },
